styles.css
body {
    background-color: #e6e6e6;
    display: flex;
    justify-content: center;
}
h1 {
    text-align: center;
    font-weight: bold;
    font-family: Arial, Helvetica, sans-serif;
    font-size: xx-large;
}
.box {
    background-color: white;
    border-radius: 20px;
    box-shadow: 0px 0px 1px black;
    display: flex;
    margin-bottom: 20px;
    flex-direction: row;
    justify-content: center;
    max-width: 800px;
    padding: 20px;
    }

    @media (max-width: 600px) {
  .box {
    flex-wrap: wrap;

    }
  }
  
.box__icon img {
     width: 200px;
     justify-content: center;
     height: auto;
     margin-top: 10px;
     margin-bottom: 10px;

};
.box__text {
}
.box__text h2 {
    font-family: Arial, Helvetica, sans-serif;
    font-weight: 100;
    margin: 0px;

}

.box__text p {
    
    margin: 0px;
    
    font-family: "Architects Daughter", cursive;

}

